# Ariadne---Lineage-Platform

./: .gitignore  README.md  advance.md  presentation.md  refresh.sh  restart.sh  setup-windows.ps1  start.sh  stop.sh
lineage-platform/apps/gateway/: Dockerfile  pyproject.toml
qlikview-parser/: Dockerfile  Makefile  REVIEW.md  TEST_REPORT.md  pyproject.toml  pytest.ini
qlikview-parser/grammar/: QlikViewLexer.g4  QlikViewParser.g4
qlikview-parser/src/qlikview_parser/: __init__.py  connections.py  constraints.py  control_flow.py  core.py  extract_qvf.py  extract_qvw.py  ids.py  main.py  models.py  preprocessor.py  qvd_header.py  resolver.py  secrets.py  sense_objects.py  server_meta.py  sql_block.py  xml_metadata.py
qlikview-parser/tests/: README.md  conftest.py  requirements-test.txt
qlikview-parser/tests/fixtures/: 02_resident_load.qvs  04_concatenate.qvs  05_file_load.qvs  06_variables_and_includes.qvs  07_subroutines.qvs  08_realistic_dashboard.qvs  08_realistic_dashboard.xml  09_comments_and_edge_cases.qvs  10_qvd_load.qvs
qlikview-parser/tests/integration/: test_attribute_emission.py  test_binary_load.py  test_connection_store_integration.py  test_cross_parser_merge.py  test_end_to_end.py  test_id_stability.py  test_idempotent_merge.py  test_neo4j_schema.py  test_remediation_attrs_vars_binary.md  test_remediation_dsh_executive.py  test_secret_leak.py  test_vertical_slice_qvw.py
qlikview-parser/tests/unit/: test_comments.py  test_concatenate.py  test_connection_store.py  test_connections.py  test_constraints.py  test_control_flow.py  test_expressions.py  test_field_extraction.py  test_includes.py  test_join.py  test_load_statement.py  test_qvd_header.py  test_qvf_extractor.py  test_resident.py  test_resolver.py  test_sense_objects.py  test_server_meta.py  test_sql_block.py  test_sql_column_lineage.py  test_subroutines.py  test_variables.py
spark-parser/: Dockerfile  FEATURES.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt
spark-parser/fixtures/: README.md
spark-parser/fixtures/notebooks/: 01_simple.ipynb  02_databricks_format.py  03_mixed_python_sql.ipynb  dbutils_run_chain.ipynb  magic_run_chain.py  out_of_order_execution.ipynb
spark-parser/fixtures/orchestration/: databricks_workflow.json  orders_etl_dag.py  run_jobs.sh
spark-parser/fixtures/pyspark/: 02_join_and_select.py  03_with_column_chain.py  04_groupby_agg.py  05_union.py  06_udf_usage.py  07_dynamic_table_name.py  08_spark_sql_inside.py  09_realistic_etl.py  broadcast_hint_pipeline.py  cache_persist_pipeline.py  callback_transforms.py  class_pipeline.py  collapse_anchor_chain.py  column_shadow_self_edge.py  column_shadowing.py  dynamic_loop_runtime.py  eval_transform.py  hof_factory_pipeline.py  kwarg_binding_pipeline.py  literal_loop_lineage.py  nested_schema_mutation.py  recursion_and_vararg.py  reflection_pipeline.py  rename_chain.py  selectexpr_columns.py  setattr_dataframes.py  sql_template_runtime.py  star_select_and_alias_chain.py  try_main_entry.py  tuple_return.py  type_evolution.py
spark-parser/fixtures/samples/: sample_1_basic_read_write.py  sample_2_join_and_filter.py  sample_3_column_derivations.py  sample_4_full_etl_with_sql_and_udf.py
spark-parser/integration/: test_api.py  test_cross_file_lineage.py  test_cross_parser_merge.py  test_end_to_end.py  test_neo4j_schema.py
spark-parser/unit/: test_abstractions.py  test_collapse_anchors.py  test_connections_plan.py  test_connectors.py  test_delta_log.py  test_federation.py  test_format_detector.py  test_ids.py  test_m2_m3_gaps.py  test_module_resolver.py  test_notebook.py  test_notebook_semantics.py  test_orchestration.py  test_path_parser.py  test_phase3_schema_runtime.py  test_project_parser.py  test_pyspark_joins.py  test_pyspark_reads.py  test_pyspark_transformations.py  test_pyspark_udfs.py  test_pyspark_variables.py  test_pyspark_writes.py  test_runtime.py  test_runtime_dynamic.py  test_sparksql_grammar.py  test_sparksql_lineage.py
tableau-parser/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
tableau-parser/scripts/: smoke.sh
tableau-parser/tests/: .gitignore  README.md  conftest.py  pytest.ini  requirements-test.txt
tws-parser/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
tws-parser/grammar/: TWSComposerLexer.g4  TWSComposerParser.g4
tws-parser/migrations/: 2026_06_tws_v0_2.cypher
tws-parser/scripts/: smoke.sh
tws-parser/tests/: .gitignore  README.md  conftest.py  pytest.ini  requirements-test.txt
(+437 files in other folders)
