[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlikview-parser"
version = "0.1.0"
description = "Parses QlikView (.qvs) load scripts into the lineage knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.18",
    "sqlglot>=23.0",
    "lxml>=5.1",
    "antlr4-python3-runtime==4.13.1",
    "chardet>=5.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    # v0.2 — QVW (OLE compound) extraction. Pure-Python, no native deps.
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
