[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tws-parser"
version = "0.1.0"
description = "Parses IBM TWS schedule/job definitions into the lineage knowledge graph (Neo4j) + an operational Postgres mirror"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "lxml>=5.1",
    "antlr4-python3-runtime==4.13.1",
    "neo4j>=5.18",
    "psycopg[binary]>=3.1",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[neo4j,postgres]>=4.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/tws_parser/generated"]
