[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lineage-gateway"
version = "0.1.0"
description = "FastAPI aggregation gateway for the multi-parser lineage platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "neo4j>=5.20",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lineage_gateway.presets" = ["*.cypher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
